# gpuless

./: CMakeLists.txt  README.md
src/: cubin_analyzer.cpp  utils.cpp
src/analysis/: libcudaanalysis.cpp
src/argument_analysis/: libarganalysis.cpp
src/schemas/: cuda_runtime_calls.fbs  cuda_runtime_calls_generated.h
src/trace/: abstract_cuda_api_call.hpp  cubin_analysis.cpp  cubin_analysis.hpp  cuda_api_calls.cpp  cuda_api_calls.hpp  cuda_trace.cpp  cuda_trace.hpp  cuda_trace_converter.cpp  cuda_virtual_device.cpp  cuda_virtual_device.hpp  cudnn_api_calls.cpp  dlsym_util.cpp  hijack_cudnn.cpp  libgpuless.cpp  trace_executor.hpp  trace_executor_local.cpp  trace_executor_local.hpp  trace_executor_shmem_client.cpp  trace_executor_shmem_client.hpp  trace_executor_tcp_client.cpp  trace_executor_tcp_client.hpp
src/trace/manager/: manager.cpp  manager_device.cpp  manager_device.hpp  manager_device_cli.cpp  memory_store.cpp  memory_store.hpp
src/trace/shmem/: memcpy_stats.hpp  mempool.hpp
